--- a/public/index.html
+++ b/public/index.html
@@ -299,8 +299,8 @@
                   <div class="
                         sales
                         d-flex
+                        flex-column
                         justify-content-center
-                        flex-wrap
                         align-items-center
                         h-100
                       ">
