--- a/public/index.html
+++ b/public/index.html
@@ -133,6 +133,18 @@
         </div>
       </div>
     </div>
+    <div class="toast show position-absolute top-0 end-0" role="alert" aria-live="assertive" aria-atomic="true">
+      <div class="toast-header">
+        <strong class="me-auto">New Map Feature ⭐</strong>
+        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+      </div>
+      <div class="toast-body d-flex flex-column-reverse align-items-center justify-content-center  ">
+        <a href="#" target="_blank" rel="noreferrer" class="d-block" style="color: inherit;"> <i
+            class="fab fa-github"></i></a>
+        <p>To check it out, fork <code class="ms-1">Master</code> branch from Github</p>
+      </div>
+    </div>
+
   </div>
   </div>
   <div class="container-fluid position-absolute statistics min-vh-100">
