--- a/public/index.html
+++ b/public/index.html
@@ -133,7 +133,7 @@
         </div>
       </div>
     </div>
-    <div class="toast show position-absolute top-0 end-0" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="toast show position-absolute top-0 end-0 d-none" role="alert" aria-live="assertive" aria-atomic="true">
       <div class="toast-header">
         <strong class="me-auto">New Map Feature ⭐</strong>
         <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
