Link to fork from Github

--- a/public/index.html
+++ b/public/index.html
@@ -139,8 +139,8 @@
         <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
       </div>
       <div class="toast-body d-flex flex-column-reverse align-items-center justify-content-center  ">
-        <a href="#" target="_blank" rel="noreferrer" class="d-block" style="color: inherit;"> <i
-            class="fab fa-github"></i></a>
+        <a href="https://github.com/eliac7/efood-analytics" target="_blank" rel="noreferrer" class="d-block"
+          style="color: inherit;"> <i class="fab fa-github"></i></a>
         <p>To check it out, fork <code class="ms-1">Master</code> branch from Github</p>
       </div>
     </div>
