--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,19 @@
 </head>
 
 <body class="position-relative">
+  <div class="posotion-aboslute inset-0 h-100 w-100 d-flex align-items-center justify-content-center "
+    style="z-index: 5;background-color: rgba(0,0,0,0.4)">
+    <div class="card">
+      <div class="card-body">
+        <p class="card-text">Unfortunately, e-food decide to change the way the orders history works.</p>
+        <p class="card-text">If you want to help on finding a solution, pull requests are welcome.</p>
+            <a class="d-inline" href="https://github.com/eliac7/efood-analytics"
+            target="_blank">Github</a>
+        </p>
+       
+      </div>
+    </div>
+  </div>
   <div class="
         container-fluid
         upload-container
