--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!--Custom CSS-->
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="./styles.css" />
 
   <title>E-food Analytics - Check your spendings on E-food</title>
 </head>
