--- a/public/index.html
+++ b/public/index.html
@@ -544,7 +544,7 @@
                 <td>04/11/2021</td>
                 <td>13:08:05</td>
                 <td>
-                  <i class="fas fa-info bg-success text-white p-1" title="Click to see your products"></i>
+                  <i class="fas fa-info bg-success text-white p-1" title="Click to see your products" title="Logout"></i>
                 </td>
                 <td>13,40€</td>
               </tr>
