--- a/public/index2.html
+++ b/public/index2.html
@@ -289,7 +289,7 @@
           >
             <div class="text-center shadow-lg welcome-text-name-container">
               <p class="h6 m-0">
-                Καλώς ήρθες <span class="welcome-text-name">Ηλία</span>
+                Καλώς ήρθες <span class="welcome-text-name"></span>
               </p>
             </div>
           </div>
@@ -315,7 +315,7 @@
                       </div>
                       <div class="info">
                         <h6>Πρωτη παραγγελία</h6>
-                        <p class="m-0">12/12/2022</p>
+                        <p class="m-0"></p>
                       </div>
                     </div>
                     <div
@@ -326,7 +326,7 @@
                       </div>
                       <div class="info">
                         <h6>Tελευταία παραγγελία</h6>
-                        <p class="m-0">12/12/2022</p>
+                        <p class="m-0"></p>
                       </div>
                     </div>
                     <div
@@ -338,7 +338,7 @@
 
                       <div class="info">
                         <h6>Συνολικές παραγγελίες</h6>
-                        <p class="m-0">200</p>
+                        <p class="m-0"></p>
                       </div>
                     </div>
                   </div>
@@ -358,7 +358,7 @@
                       </div>
                       <div class="info">
                         <h6 class="mb-2">Συνολικές δαπάνες</h6>
-                        <p class="m-0">20.000€</p>
+                        <p class="m-0"></p>
                       </div>
                     </div>
                     <div
@@ -369,7 +369,7 @@
                       </div>
                       <div class="info">
                         <h6 class="mb-2">Συνολικά φιλοδωρήματα</h6>
-                        <p class="m-0">20€</p>
+                        <p class="m-0"></p>
                       </div>
                     </div>
                     <div class="col-md-3">
@@ -396,7 +396,7 @@
                       </div>
                       <div class="info">
                         <h6 class="mb-2 text-muted">Μοναδικά καταστήματα</h6>
-                        <p class="m-0">20</p>
+                        <p class="m-0"></p>
                       </div>
                     </div>
                     <div
@@ -411,7 +411,7 @@
                       </div>
                       <div class="info">
                         <h6 class="mb-2 text-muted">Το πιο συχνό εστιατόριο</h6>
-                        <p class="m-0">Gril Academy</p>
+                        <p class="m-0"></p>
                         <p
                           class="text-muted"
                           style="font-size: 0.8rem; margin-top: 1rem"
@@ -432,13 +432,11 @@
                       </div>
                       <div class="info">
                         <h6 class="mb-2 text-muted">Το πιο συχνό προϊόν</h6>
-                        <p class="m-0">Σουβλάκι χορινό</p>
+                        <p class="m-0"></p>
                         <p
                           class="text-muted"
                           style="font-size: 0.8rem; margin-top: 1rem"
-                        >
-                          60 φορές
-                        </p>
+                        ></p>
                       </div>
                     </div>
                   </div>
@@ -452,7 +450,7 @@
                       </div>
                       <div class="info">
                         <h6 class="mb-2 text-muted">Μέσος όρος αναμονής</h6>
-                        <p class="m-0">20'</p>
+                        <p class="m-0"></p>
                       </div>
                     </div>
                     <div
@@ -463,7 +461,7 @@
                       </div>
                       <div class="info">
                         <h6 class="mb-2 text-muted">Deliverd by e-food</h6>
-                        <p class="m-0">10€</p>
+                        <p class="m-0"></p>
                       </div>
                     </div>
                     <div
@@ -474,7 +472,7 @@
                       </div>
                       <div class="info">
                         <h6 class="mb-2 text-muted">Ποσό κουπονιών</h6>
-                        <p class="m-0">10€</p>
+                        <p class="m-0"></p>
                       </div>
                     </div>
                   </div>
@@ -515,38 +513,7 @@
                         <th>Σύνολο</th>
                       </tr>
                     </thead>
-                    <tbody id="ordersTableBody">
-                      <tr>
-                        <td>232686002</td>
-                        <td>Grill Academy</td>
-                        <td>04/11/2021</td>
-                        <td>13:08:05</td>
-                        <td>
-                          <div>
-                            <i
-                              class="fas fa-info text-white"
-                              title="Click to see your products"
-                            ></i>
-                          </div>
-                        </td>
-                        <td>13,40€</td>
-                      </tr>
-                      <tr>
-                        <td>232686002</td>
-                        <td>Big Bad Wolf</td>
-                        <td>04/11/2021</td>
-                        <td>13:08:05</td>
-                        <td>
-                          <div>
-                            <i
-                              class="fas fa-info text-white"
-                              title="Click to see your products"
-                            ></i>
-                          </div>
-                        </td>
-                        <td>6,60€</td>
-                      </tr>
-                    </tbody>
+                    <tbody id="ordersTableBody"></tbody>
                   </table>
                 </div>
               </div>
@@ -575,7 +542,7 @@
                 rel="noreferrer"
                 class="credits-link"
               >
-                Ilias Thalassochoritis © <span class="year">2022</span>
+                Ilias Thalassochoritis © <span class="year"></span>
               </a>
             </div>
           </div>
