--- a/public/index2.html
+++ b/public/index2.html
@@ -208,7 +208,7 @@
 
     <main class="flex-grow-1 d-flex align-items-center justify-content-center">
       <!--Container of login-->
-      <div class="container-fluid outer-container">
+      <div class="container-fluid outer-container d-none">
         <div class="row">
           <div class="col d-flex align-items-center justify-content-center">
             <div class="container p-0 login-box shadow-lg">
@@ -221,9 +221,44 @@
                     <!-- Additional required wrapper -->
                     <div class="swiper-wrapper">
                       <!-- Slides -->
-                      <div class="swiper-slide">Slide 1</div>
-                      <div class="swiper-slide">Slide 2</div>
-                      <div class="swiper-slide">Slide 3</div>
+                      <div
+                        class="swiper-slide p-3 d-flex flex-column justify-content-center align-items-center"
+                      >
+                        <img
+                          src="./assets/images/features/bar.png"
+                          alt=""
+                          class="img-fluid"
+                        />
+                        <p class="mt-3" style="letter-spacing: 1px">
+                          ΓΡΑΦΗΜΑΤΑ ΜΕ ΤΙΣ ΠΑΡΑΓΓΕΛΙΕΣ ΣΑΣ ΚΑΙ ΤΑ ΕΞΟΔΑ ΣΑΣ ΑΝΑ
+                          ΧΡΟΝΟ
+                        </p>
+                      </div>
+                      <div
+                        class="swiper-slide p-3 d-flex flex-column justify-content-center align-items-center"
+                      >
+                        <img
+                          src="./assets/images/features/map.png"
+                          alt=""
+                          class="img-fluid"
+                        />
+                        <p class="mt-3" style="letter-spacing: 1px">
+                          ΔΙΑΔΡΑΣΤΙΚΟΣ ΧΑΡΤΗΣ ΜΕ ΤΟ ΚΑΘΕ ΕΣΤΙΑΤΟΡΙΟ ΚΑΘΩΣ ΚΑΙ
+                          ΠΟΣΑ ΧΡΗΜΑΤΑ ΕΧΕΤΕ ΔΑΠΑΝΗΣΕΙ ΣΕ ΑΥΤΟ
+                        </p>
+                      </div>
+                      <div
+                        class="swiper-slide p-3 d-flex flex-column justify-content-center align-items-center"
+                      >
+                        <img
+                          src="./assets/images/features/general.png"
+                          alt=""
+                          class="img-fluid"
+                        />
+                        <p class="mt-3" style="letter-spacing: 1px">
+                          ΓΕΝΙΚΑ ΣΤΑΤΙΣΤΙΚΑ ΑΠΟ ΤΟ ΣΥΝΟΛΟ ΤΩΝ ΠΑΡΑΓΓΕΛΙΩΝ ΣΑΣ
+                        </p>
+                      </div>
                       ...
                     </div>
                     <!-- If we need pagination -->
@@ -282,7 +317,7 @@
         </div>
       </div>
       <!--Container of results-->
-      <div class="container-fluid w-100 outer-results-container d-none">
+      <div class="container-fluid w-100 outer-results-container">
         <div class="row flex-column">
           <div
             class="col text-center d-flex align-items-center justify-content-center"
@@ -415,9 +450,7 @@
                         <p
                           class="text-muted"
                           style="font-size: 0.8rem; margin-top: 1rem"
-                        >
-                          60 φορές
-                        </p>
+                        ></p>
                       </div>
                     </div>
                     <div
@@ -497,7 +530,7 @@
             <!--Table container-->
             <div class="container table-container w-100 shadow-lg rounded p-3">
               <div class="row">
-                <h4 class="text-center">
+                <h4 class="text-center" style="color: var(--white-color)">
                   <span class="number-orders">10</span> πιο πρόσφατες
                   παραγγελίες
                 </h4>
