Fix dark mode Add DEVELOPMENT env variable uninstall api cache

--- a/public/index2.html
+++ b/public/index2.html
@@ -208,7 +208,7 @@
 
     <main class="flex-grow-1 d-flex align-items-center justify-content-center">
       <!--Container of login-->
-      <div class="container-fluid outer-container d-none">
+      <div class="container-fluid outer-container">
         <div class="row">
           <div class="col d-flex align-items-center justify-content-center">
             <div class="container p-0 login-box shadow-lg">
@@ -317,7 +317,7 @@
         </div>
       </div>
       <!--Container of results-->
-      <div class="container-fluid w-100 outer-results-container">
+      <div class="container-fluid w-100 outer-results-container d-none">
         <div class="row flex-column">
           <div
             class="col text-center d-flex align-items-center justify-content-center"
