--- a/public/index2.html
+++ b/public/index2.html
@@ -213,7 +213,7 @@
           <div class="col d-flex align-items-center justify-content-center">
             <div class="container p-0 login-box shadow-lg">
               <div
-                class="row text-center w-100 h-100 d-flex flex-column-reverse flex-lg-row m-0"
+                class="row text-center d-flex flex-column-reverse flex-lg-row m-0"
               >
                 <div class="col-sm-12 col-lg-6 login-slider p-0">
                   <!-- Slider main container -->
@@ -266,7 +266,7 @@
                   </div>
                 </div>
                 <div
-                  class="col-sm-12 col-lg-6 login-form py-3 d-flex flex-column flex-grow-1 justify-content-center align-items-center"
+                  class="col-sm-12 col-lg-6 login-form py-3 d-flex flex-column justify-content-center align-items-center"
                 >
                   <div class="loading">
                     <div>
@@ -278,7 +278,7 @@
                       <p class="fw-bold">Παρακαλώ περιμένετε...</p>
                       <p>Αυτή η διαδικασία μπορεί να διαρκέσει μέχρι και 1'</p>
                     </div>
-                    <p class="fst-italic" id="quote"></p>
+                    <p class="fst-italic text-break" id="quote"></p>
                   </div>
                   <div class="container p-0">
                     <div class="row">
