fix typo and error handling

--- a/public/index.html
+++ b/public/index.html
@@ -493,7 +493,7 @@
                         <i class="fas fa-shipping-fast"></i>
                       </div>
                       <div class="info">
-                        <h6 class="mb-2 text-muted">Deliverd by e-food</h6>
+                        <h6 class="mb-2 text-muted">Delivered by e-food</h6>
                         <p class="m-0"></p>
                       </div>
                     </div>
