UI login form fix

--- a/public/index.html
+++ b/public/index.html
@@ -305,7 +305,7 @@
                             <span>Κωδικός</span>
                             <i class="fa fa-eye-slash"></i>
                           </label>
-                          <button type="submit">Σύνδεση</button>
+                          <button type="submit" disabled>Σύνδεση</button>
                         </form>
                       </div>
                     </div>
