Social meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,46 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- Primary Meta Tags -->
+    <title>E-food Analytics - Check your spendings on E-food</title>
+    <meta
+      name="title"
+      content="E-food Analytics - Check your spendings on E-food"
+    />
+    <meta
+      name="description"
+      content="An unofficial tool to check your analytics of your efood.gr account. 🍔"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://efood-analytics.herokuapp.com/" />
+    <meta
+      property="og:title"
+      content="E-food Analytics - Check your spendings on E-food"
+    />
+    <meta
+      property="og:description"
+      content="An unofficial tool to check your analytics of your efood.gr account. 🍔"
+    />
+    <meta property="og:image" content="./assets/images/social.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://efood-analytics.herokuapp.com/"
+    />
+    <meta
+      property="twitter:title"
+      content="E-food Analytics - Check your spendings on E-food"
+    />
+    <meta
+      property="twitter:description"
+      content="An unofficial tool to check your analytics of your efood.gr account. 🍔"
+    />
+    <meta property="twitter:image" content="./assets/images/social.jpg" />
+
     <!--- Favicon  -->
 
     <link
@@ -146,8 +186,6 @@
 
     <!--Custom CSS-->
     <link rel="stylesheet" href="./styles.css" />
-
-    <title>E-food Analytics - Check your spendings on E-food</title>
   </head>
 
   <body>
