Responsive fixes CDN for leaflet gesture handling

--- a/public/index.html
+++ b/public/index.html
@@ -180,12 +180,15 @@
     <!--Leaflet Gesture CSS-->
     <link
       rel="stylesheet"
-      href="//unpkg.com/leaflet-gesture-handling/dist/leaflet-gesture-handling.min.css"
+      href="https://unpkg.com/@raruto/leaflet-gesture-handling@latest/dist/leaflet-gesture-handling.min.css"
       type="text/css"
     />
 
     <!--Custom CSS-->
     <link rel="stylesheet" href="./styles.css" />
+
+    <!--Toggle JS -->
+    <script type="module" src="./toggle.js"></script>
   </head>
 
   <body>
@@ -670,10 +673,7 @@
     ></script>
 
     <!--Leaflet gesture JS-->
-    <script src="https://elmarquis.github.io/Leaflet.GestureHandling/dist/leaflet-gesture-handling.js"></script>
-
-    <!--Toggle JS -->
-    <script type="module" src="./toggle.js"></script>
+    <script src="https://unpkg.com/@raruto/leaflet-gesture-handling@latest/dist/leaflet-gesture-handling.min.js"></script>
 
     <!--Index JS-->
     <script src="./index.js"></script>
