--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
   <body
     class="antialiased bg-gray-100 dark:bg-gray-400 dark:text-gray-100 text-gray-900 h-screen font-Manrope"
   >
-    <div id="root" class="relative flex flex-col h-screen gap-10"></div>
+    <div id="root" class="relative flex flex-col min-h-screen"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
