BACKEND: Change to type es6 module Expand logic about orders ( still in progress probably)
FRONTEND:
Use .env
Use React-Query instead of useEffecting every call
 Make custom useAuth and a ProtectedRoute
 Organize better the code by splitting

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,126 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Primary Meta Tags -->
     <title>E-food Analytics - Check your spendings on E-food</title>
+    <meta
+      name="title"
+      content="E-food Analytics - Check your spendings on E-food"
+    />
+    <meta
+      name="description"
+      content="An unofficial tool to check your analytics of your efood.gr account. 🍔"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://efood-analytics.herokuapp.com/" />
+    <meta
+      property="og:title"
+      content="E-food Analytics - Check your spendings on E-food"
+    />
+    <meta
+      property="og:description"
+      content="An unofficial tool to check your analytics of your efood.gr account. 🍔"
+    />
+    <meta property="og:image" content="./assets/images/social.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://efood-analytics.herokuapp.com/"
+    />
+    <meta
+      property="twitter:title"
+      content="E-food Analytics - Check your spendings on E-food"
+    />
+    <meta
+      property="twitter:description"
+      content="An unofficial tool to check your analytics of your efood.gr account. 🍔"
+    />
+    <meta property="twitter:image" content="./assets/images/social.jpg" />
+
+    <!--- Favicon  -->
+
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="./assets/favicons/apple-icon-57x57.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="./assets/favicons/apple-icon-60x60.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="./assets/favicons/apple-icon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="./assets/favicons/apple-icon-76x76.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="./assets/favicons/apple-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="./assets/favicons/apple-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="./assets/favicons/apple-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="./assets/favicons/apple-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./assets/favicons/apple-icon-180x180.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="./assets/favicons/android-icon-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/favicons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="./assets/favicons/favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./assets/favicons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./assets/favicons/manifest.json" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta
+      name="msapplication-TileImage"
+      content="./assets/favicons/ms-icon-144x144.png"
+    />
   </head>
   <body
     class="antialiased bg-gray-100 dark:bg-gray-400 dark:text-gray-100 text-gray-900 h-screen font-Manrope"
